// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Render a PageTreeRoute 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="item colSpan colSpan-5 space-before-0 space-after-0"
    >
      <div
        class="singleItemSelection"
      >
        <button
          class="button left"
          type="button"
        >
          <span
            aria-label="su-document"
            class="su-document icon"
          />
        </button>
        <div
          class="itemContainer"
        >
          <div
            class="item"
            role="button"
          >
            <div
              class="empty"
            >
              sulu_page.no_page_selected
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="item colSpan colSpan-7 space-before-0 space-after-0"
    >
      <div
        class="resourceLocator"
      >
        <span
          class="fixed"
        >
          /
        </span>
        <div
          class="input default left"
        >
          <input
            id="/"
            type="text"
            value="hello"
          />
        </div>
      </div>
      <div
        class="buttonsContainer"
      >
        <button
          class="button link hasText refreshButton"
          disabled=""
          type="button"
        >
          <span
            aria-label="su-sync"
            class="su-sync buttonIcon"
          />
          <span
            class="buttonText"
          >
            sulu_admin.refresh_url
          </span>
        </button>
        <button
          class="button link hasText"
          type="button"
        >
          <span
            aria-label="su-process"
            class="su-process buttonIcon"
          />
          <span
            class="buttonText"
          >
            sulu_admin.show_history
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render a PageTreeRoute without value 1`] = `
<div>
  <div
    class="grid"
  >
    <div
      class="item colSpan colSpan-5 space-before-0 space-after-0"
    >
      <div
        class="singleItemSelection"
      >
        <button
          class="button left"
          type="button"
        >
          <span
            aria-label="su-document"
            class="su-document icon"
          />
        </button>
        <div
          class="itemContainer"
        >
          <div
            class="item"
            role="button"
          >
            <div
              class="empty"
            >
              sulu_page.no_page_selected
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="item colSpan colSpan-7 space-before-0 space-after-0"
    >
      <div
        class="resourceLocator"
      >
        <span
          class="fixed"
        >
          /
        </span>
        <div
          class="input default left"
        >
          <input
            id="/"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="buttonsContainer"
      >
        <button
          class="button link hasText refreshButton"
          disabled=""
          type="button"
        >
          <span
            aria-label="su-sync"
            class="su-sync buttonIcon"
          />
          <span
            class="buttonText"
          >
            sulu_admin.refresh_url
          </span>
        </button>
        <button
          class="button link hasText"
          disabled=""
          type="button"
        >
          <span
            aria-label="su-process"
            class="su-process buttonIcon"
          />
          <span
            class="buttonText"
          >
            sulu_admin.show_history
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
